--- a/src/main.tex
+++ b/src/main.tex
@@ -5,7 +5,7 @@
 % and footer configuration below
 %
 %-------------------------------------%
-\immediate\write18{sh ./vc}
+\immediate\write18{sh ../scripts/vc}
 \input{vc}
 
 %-------------------------------------%
@@ -47,7 +47,7 @@
 % Book title
 %
 %-------------------------------------%
-\title{\textbf{Cloud Confindential}}
+\title{\textbf{NDA STEAM Initive}}
 \date{}
 \author{Matt Jones}
 
